# textwatermark-service

./: .gitignore  .pylintrc  Dockerfile  Dockerfile.dev  README.md  changelog.md  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  tox.ini
Benchmarks/: do_job.lua  worker_create.lua  wrk.md
src/textwatermark_service/: __init__.py  crud.py  main.py  run.py
src/textwatermark_service/config/: __init__.py  settings.yml
src/textwatermark_service/db/: __init__.py  database.py  models.py  redis.py  schemas.py
tests/: test_main.py
