[tool.poetry]
name = "textwatermark-service"
version = "0.2.1"
description = ""
authors = ["Monyer <monyer@126.com>"]
readme = "README.md"
license = "Apache"
packages = [{ include = "textwatermark_service", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1"
fastapi = "^0.92.0"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.4"
textwatermark = "^0.3.2"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
httpx = "^0.23.3"
pytest = "^7.2.1"
tox = "^4.4.6"
black = "^23.1.0"
mypy = "^1.0.1"
coverage = "^7.2.1"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.6"}


[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
